--- a/views/linechart.ejs
+++ b/views/linechart.ejs
@@ -9,7 +9,7 @@
     "settings" : {
       "axisx" : [
         <% for (var i = 0, j = stats.length; i < j; i++) { %>
-          <% if (i > 0) { %>,<% } %>"<%= moment(stats[i].timestamp).format('hA'); %>"
+          <% if (i > 0) { %>,<% } %>"<%= moment(stats[i].timestamp).format('hA') %>"
         <% } %>
       ],
       "axisy" : [],
