Bug fix and line chart tweaks, now @alpha v5

--- a/views/linechart.ejs
+++ b/views/linechart.ejs
@@ -2,14 +2,16 @@
   "api_key": "<%= apiKey %>",
   "data": {
     "item" : [
-      <% for (var i = 0, j = stats.length; i < j; i++) { %>
-        <% if (i > 0) { %>,<% } %><%= stats[i].responsiveness %>
+      <% for (var i = numTick; i--; ) { %>
+        <%= stats[i].time %><% if (i > 0) { %>,<% } %>
       <% } %>
     ],
     "settings" : {
       "axisx" : [
-        <% for (var i = 0, j = stats.length; i < j; i++) { %>
-          <% if (i > 0) { %>,<% } %>"<%= moment(stats[i].timestamp).format('hA') %>"
+        <% for (var i = numTick; i--; ) { %>
+          <% if (i == numTick || i == 0 || i % 10 == 0) { %>
+            "<%= moment(stats[i].timestamp).format('h:mA') %>"<% if (i > 0) { %>,<% } %>
+          <% } %>
         <% } %>
       ],
       "axisy" : [],
